--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,6 +4,6 @@
     <vendor>Your name</vendor>
     <depends>com.intellij.modules.platform</depends>
     <extensions defaultExtensionNs="com.intellij">
-        <!-- Add your extensions here -->
+        <toolWindow factoryClass="greeting.GreetingToolWindowFactory" id="Greeting" />
     </extensions>
 </idea-plugin>
